--- a/ProjetIHM/src/application/Accueilstyle.css
+++ b/ProjetIHM/src/application/Accueilstyle.css
@@ -1,7 +1,13 @@
 .label:hover {
     -fx-text-fill: #3355CC;
-    -fx-underline: true;
+    -fx-underline: false;
 }
+
+
+.hbox .label:hover{
+	-fx-underline:false;
+}
+
 
 .hbox {
     -fx-spacing: 170;
@@ -12,5 +18,46 @@
     -fx-text-fill: #D9D9D9;
     -fx-font-weight: bold;
     -fx-cursor: hand;
+    
 }
+
+.label:hover {
+    -fx-background-color: #D9D9D9;
+    -fx-cursor: hand; 
+}
+
+
+.menu-button {
+	-fx-background-color: #F5F5F5;
+    -fx-font-size: 14px;
+	-fx-border-color: none;
+}
+.menu-button > .label {
+    -fx-text-fill: #2233AA; 
+}
+
+.menu-button:hover {
+    -fx-background-color: #D9D9D9;
+}
+
+
+.button {
+	-fx-background-color: #F5F5F5;
+	-fx-text-fill: #2233AA;
+	-fx-font-size: 14px;
+	-fx-border-color: none;
+}
+
+
+
+.button:hover {
+	-fx-background-color: #D9D9D9; 
+}
+#pasdeCss {
+    -fx-background-color: unset;
+    -fx-cursor: unset;
+}
+
+
+
 
